crates/check_cli/tests/snapshots/main_cases_handle_vue_files/check_stdin_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
<script setup lang="ts">
import {      Button  as Button  }   from  "./components/Button.vue"   ;
import *     as         vueUse  from  "vue-use"   ;

delete a.c;
</script>
<template></template>
```

# Termination Message

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The contents aren't fixed. Use the `--write` flag to fix them.
  


```

# Emitted Messages

```block
<script setup lang="ts">
import {      Button  as Button  }   from  "./components/Button.vue"   ;
import *     as         vueUse  from  "vue-use"   ;

delete a.c;
</script>
<template></template>
```
