crates/check_cli/tests/snapshots/main_cases_handle_vue_files/check_stdin_write_unsafe_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
<script setup lang="ts">
import {      Button  as Button  }   from  "./components/Button.vue"   ;
import *     as         vueUse  from  "vue-use"   ;

delete a.c;
</script>
<template></template>
```

# Emitted Messages

```block
<script setup lang="ts">
delete a.c;
</script>
<template></template>
```
