crates/check_cli/tests/snapshots/main_cases_handle_vue_files/format_empty_vue_ts_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<template></template>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. No fixes applied.
```
