crates/check_cli/tests/snapshots/main_cases_handle_vue_files/format_stdin_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
<script setup lang="ts">
import     { type     something } from "file.vue";
const hello  :      string      = "world";
</script>
<template></template>
```

# Emitted Messages

```block
<script setup lang="ts">
import { type something } from "file.vue";
const hello: string = "world";
</script>
<template></template>
```
