crates/check_cli/tests/snapshots/main_cases_handle_vue_files/format_vue_explicit_js_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<script lang="js">
import {    something } from "file.vue";
statement ( ) ;
</script>
<template></template>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   <script lang="js">
    2   │ - import·{····something·}·from·"file.vue";
    3   │ - statement·(·)·;
      2 │ + import·{·something·}·from·"file.vue";
      3 │ + statement();
    4 4 │   </script>
    5 5 │   <template></template>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
