crates/check_cli/tests/snapshots/main_cases_handle_vue_files/format_vue_ts_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<script setup lang="ts">
import     { type     something } from "file.vue";
const hello  :      string      = "world";
</script>
<template></template>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   <script setup lang="ts">
    2   │ - import·····{·type·····something·}·from·"file.vue";
    3   │ - const·hello··:······string······=·"world";
      2 │ + import·{·type·something·}·from·"file.vue";
      3 │ + const·hello:·string·=·"world";
    4 4 │   </script>
    5 5 │   <template></template>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
